added: get single order
